Fixed overlapped courses

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -770,6 +770,7 @@ button {
     background-color: #e17055;
     padding: 8px;
     border-radius: 2px;
+    box-sizing: border-box;
 }
 
 
